--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "argon2": "^0.28.2",
     "class-validator": "^0.13.1",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
