--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Madlife",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.10.3",
