--- a/client/package.json
+++ b/client/package.json
@@ -13,21 +13,23 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "graphql": "^15.6.1",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.2.1",
+    "@graphql-codegen/typescript": "2.2.4",
+    "@graphql-codegen/typescript-operations": "2.1.8",
+    "@graphql-codegen/typescript-react-apollo": "3.1.6",
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "typescript": "4.3.2",
-    "@graphql-codegen/typescript-operations": "2.1.8",
-    "@graphql-codegen/typescript": "2.2.4",
-    "@graphql-codegen/typescript-react-apollo": "3.1.6"
+    "typescript": "4.3.2"
   }
 }
