--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.10.3",
+    "@types/nodemailer": "^6.4.4",
     "nodemon": "^2.0.13",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.3"
@@ -30,6 +31,7 @@
     "express-session": "^1.17.2",
     "graphql": "^15.6.1",
     "mongoose": "~6.0.9",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
