--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
+    "@types/uuid": "^8.3.1",
     "apollo-server-core": "^3.4.0",
     "apollo-server-express": "^3.4.0",
     "argon2": "^0.28.2",
@@ -35,6 +36,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   }
 }
